--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shopping-cart",
   "version": "0.0.0",
   "private": true,
+  "author": "lue_hang@hotmail.com",
   "scripts": {
     "start": "nodemon ./bin/www"
   },
