--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "webpack": "webpack"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.1.4",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "~1.13.2",
