--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "nodemon ./bin/www",
     "babel": "babel",
-    "webpack": "webpack"
+    "build": "webpack -p"
   },
   "dependencies": {
     "@sendgrid/mail": "^6.1.4",
@@ -38,8 +38,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "webpack": "^3.9.1"
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.9.1",
+    "webpack-dev-server": "^2.9.5"
   }
 }
