--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "gulp": "^3.9.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-imagemin": "^4.0.0",
+    "gulp-rename": "^1.2.2",
     "jquery": "^3.2.1",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
