--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
@@ -52,6 +53,7 @@
     "gulp-cssmin": "^0.2.0",
     "gulp-imagemin": "^4.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
