--- a/package.json
+++ b/package.json
@@ -58,10 +58,12 @@
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "node-sass": "^4.7.2",
-    "react": "^16.2.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.1",
     "react-dom": "^16.2.0",
     "sass-loader": "^6.0.6",
-    "webpack": "^3.9.1",
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^2.9.5"
   }
 }
